unc-abi/src/snapshots/unc_abi__tests__deser_struct_unnamed.snap
---
source: unc-abi/src/lib.rs
expression: expected_json_str
---
{
  "serialization_type": "borsh",
  "type_schema": {
    "declaration": "Pair",
    "definitions": {
      "Pair": {
        "Struct": [
          "u32",
          "u32"
        ]
      },
      "u32": {
        "Primitive": 4
      }
    }
  }
}
